src/main/java/com/example/aboutme/_core/error/exception/Exception401.java
package com.example.aboutme._core.error.exception;

public class Exception401 extends RuntimeException {

    public Exception401(String msg) {
        super(msg);
    }
}
